[gd_scene load_steps=8 format=3 uid="uid://dath4f6h4tbmk"]

[ext_resource type="Script" uid="uid://b4jutcuofd1mp" path="res://main.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://bqpyg61et07pf" path="res://godot.png" id="2_tapbf"]

[sub_resource type="Gradient" id="Gradient_npp8a"]
offsets = PackedFloat32Array(0)
colors = PackedColorArray(0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_md057"]
gradient = SubResource("Gradient_npp8a")
width = 800
height = 10

[sub_resource type="Gradient" id="Gradient_vuuif"]
offsets = PackedFloat32Array(0)
colors = PackedColorArray(0, 1, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_35fte"]
gradient = SubResource("Gradient_vuuif")
width = 800
height = 10

[sub_resource type="Curve2D" id="Curve2D_7nae7"]
_data = {
"points": PackedVector2Array(-142, -129, 142, 129, 2, 2, 0, 0, 0, 0, 311, 5, 172, -42, -172, 42, 45, -130, 83, 25, -83, -25, -150, -7, -16, 28, 16, -28, -198, -75, 0, 0, 0, 0, -71, -132)
}
point_count = 6

[node name="TweenDemo" type="CanvasLayer"]
script = ExtResource("1")
metadata/_edit_lock_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
color = Color(0.027451, 0, 0.168627, 1)

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/PanelContainer"]
layout_mode = 2

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer/PanelContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
text = "Loops"

[node name="Loops" type="SpinBox" parent="VBoxContainer/PanelContainer/VBoxContainer/HBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
min_value = 1.0
value = 1.0

[node name="Infinite" type="CheckBox" parent="VBoxContainer/PanelContainer/VBoxContainer/HBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
text = "Infinite?"

[node name="Reset" type="CheckBox" parent="VBoxContainer/PanelContainer/VBoxContainer/HBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "If enabled, the Tween will take an extra step to ensure
that all properties are restored to their initial value."
button_pressed = true
text = "Reset Between Loops?"

[node name="Button" type="Button" parent="VBoxContainer/PanelContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
text = "Start Animation"

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="HFlowContainer" type="HBoxContainer" parent="VBoxContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 16
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/PanelContainer/VBoxContainer/HFlowContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/PanelContainer/VBoxContainer/HFlowContainer/VBoxContainer"]
layout_mode = 2
text = "Step 1"
horizontal_alignment = 1

[node name="MoveTo" type="CheckBox" parent="VBoxContainer/PanelContainer/VBoxContainer/HFlowContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
button_pressed = true
text = "Move To"

[node name="Ease1" type="OptionButton" parent="VBoxContainer/PanelContainer/VBoxContainer/HFlowContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
item_count = 4
selected = 0
popup/item_0/text = "In"
popup/item_0/id = 0
popup/item_1/text = "Out"
popup/item_1/id = 1
popup/item_2/text = "In/Out"
popup/item_2/id = 2
popup/item_3/text = "Out/In"
popup/item_3/id = 3

[node name="Trans1" type="OptionButton" parent="VBoxContainer/PanelContainer/VBoxContainer/HFlowContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
item_count = 11
selected = 0
popup/item_0/text = "Linear"
popup/item_0/id = 2
popup/item_1/text = "Sine"
popup/item_1/id = 1
popup/item_2/text = "Quint"
popup/item_2/id = 2
popup/item_3/text = "Quart"
popup/item_3/id = 3
popup/item_4/text = "Quad"
popup/item_4/id = 4
popup/item_5/text = "Expo"
popup/item_5/id = 5
popup/item_6/text = "Elastic"
popup/item_6/id = 6
popup/item_7/text = "Cubic"
popup/item_7/id = 7
popup/item_8/text = "Circ"
popup/item_8/id = 8
popup/item_9/text = "Bounce"
popup/item_9/id = 9
popup/item_10/text = "Back"
popup/item_10/id = 10

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer/PanelContainer/VBoxContainer/HFlowContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/PanelContainer/VBoxContainer/HFlowContainer/VBoxContainer2"]
layout_mode = 2
text = "Step 2"
horizontal_alignment = 1

[node name="ColorRed" type="CheckBox" parent="VBoxContainer/PanelContainer/VBoxContainer/HFlowContainer/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
button_pressed = true
text = "Color Red"

[node name="VBoxContainer3" type="VBoxContainer" parent="VBoxContainer/PanelContainer/VBoxContainer/HFlowContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/PanelContainer/VBoxContainer/HFlowContainer/VBoxContainer3"]
layout_mode = 2
text = "Step 3"
horizontal_alignment = 1

[node name="MoveRight" type="CheckBox" parent="VBoxContainer/PanelContainer/VBoxContainer/HFlowContainer/VBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
button_pressed = true
text = "Move Right"

[node name="Roll" type="CheckBox" parent="VBoxContainer/PanelContainer/VBoxContainer/HFlowContainer/VBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
button_pressed = true
text = "Roll"

[node name="Ease3" type="OptionButton" parent="VBoxContainer/PanelContainer/VBoxContainer/HFlowContainer/VBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
item_count = 4
selected = 0
popup/item_0/text = "In"
popup/item_0/id = 0
popup/item_1/text = "Out"
popup/item_1/id = 1
popup/item_2/text = "In/Out"
popup/item_2/id = 2
popup/item_3/text = "Out/In"
popup/item_3/id = 3

[node name="Trans3" type="OptionButton" parent="VBoxContainer/PanelContainer/VBoxContainer/HFlowContainer/VBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
item_count = 11
selected = 10
popup/item_0/text = "Linear"
popup/item_0/id = 2
popup/item_1/text = "Sine"
popup/item_1/id = 1
popup/item_2/text = "Quint"
popup/item_2/id = 2
popup/item_3/text = "Quart"
popup/item_3/id = 3
popup/item_4/text = "Quad"
popup/item_4/id = 4
popup/item_5/text = "Expo"
popup/item_5/id = 5
popup/item_6/text = "Elastic"
popup/item_6/id = 6
popup/item_7/text = "Cubic"
popup/item_7/id = 7
popup/item_8/text = "Circ"
popup/item_8/id = 8
popup/item_9/text = "Bounce"
popup/item_9/id = 9
popup/item_10/text = "Back"
popup/item_10/id = 10

[node name="VBoxContainer4" type="VBoxContainer" parent="VBoxContainer/PanelContainer/VBoxContainer/HFlowContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/PanelContainer/VBoxContainer/HFlowContainer/VBoxContainer4"]
layout_mode = 2
text = "Step 4"
horizontal_alignment = 1

[node name="MoveLeft" type="CheckBox" parent="VBoxContainer/PanelContainer/VBoxContainer/HFlowContainer/VBoxContainer4"]
unique_name_in_owner = true
layout_mode = 2
button_pressed = true
text = "Move Left"

[node name="Jump" type="CheckBox" parent="VBoxContainer/PanelContainer/VBoxContainer/HFlowContainer/VBoxContainer4"]
unique_name_in_owner = true
layout_mode = 2
button_pressed = true
text = "Jump"

[node name="VBoxContainer5" type="VBoxContainer" parent="VBoxContainer/PanelContainer/VBoxContainer/HFlowContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/PanelContainer/VBoxContainer/HFlowContainer/VBoxContainer5"]
layout_mode = 2
text = "Step 5"
horizontal_alignment = 1

[node name="Blink" type="CheckBox" parent="VBoxContainer/PanelContainer/VBoxContainer/HFlowContainer/VBoxContainer5"]
unique_name_in_owner = true
layout_mode = 2
button_pressed = true
text = "Blink"

[node name="VBoxContainer6" type="VBoxContainer" parent="VBoxContainer/PanelContainer/VBoxContainer/HFlowContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/PanelContainer/VBoxContainer/HFlowContainer/VBoxContainer6"]
layout_mode = 2
text = "Step 6"
horizontal_alignment = 1

[node name="Teleport" type="CheckBox" parent="VBoxContainer/PanelContainer/VBoxContainer/HFlowContainer/VBoxContainer6"]
unique_name_in_owner = true
layout_mode = 2
button_pressed = true
text = "Teleport"

[node name="VBoxContainer10" type="VBoxContainer" parent="VBoxContainer/PanelContainer/VBoxContainer/HFlowContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/PanelContainer/VBoxContainer/HFlowContainer/VBoxContainer10"]
layout_mode = 2
text = "Step 7"
horizontal_alignment = 1

[node name="Curve" type="CheckBox" parent="VBoxContainer/PanelContainer/VBoxContainer/HFlowContainer/VBoxContainer10"]
unique_name_in_owner = true
layout_mode = 2
button_pressed = true
text = "Curve"

[node name="Ease7" type="OptionButton" parent="VBoxContainer/PanelContainer/VBoxContainer/HFlowContainer/VBoxContainer10"]
unique_name_in_owner = true
layout_mode = 2
item_count = 4
selected = 1
popup/item_0/text = "In"
popup/item_0/id = 0
popup/item_1/text = "Out"
popup/item_1/id = 1
popup/item_2/text = "In/Out"
popup/item_2/id = 2
popup/item_3/text = "Out/In"
popup/item_3/id = 3

[node name="Trans7" type="OptionButton" parent="VBoxContainer/PanelContainer/VBoxContainer/HFlowContainer/VBoxContainer10"]
unique_name_in_owner = true
layout_mode = 2
item_count = 11
selected = 9
popup/item_0/text = "Linear"
popup/item_0/id = 2
popup/item_1/text = "Sine"
popup/item_1/id = 1
popup/item_2/text = "Quint"
popup/item_2/id = 2
popup/item_3/text = "Quart"
popup/item_3/id = 3
popup/item_4/text = "Quad"
popup/item_4/id = 4
popup/item_5/text = "Expo"
popup/item_5/id = 5
popup/item_6/text = "Elastic"
popup/item_6/id = 6
popup/item_7/text = "Cubic"
popup/item_7/id = 7
popup/item_8/text = "Circ"
popup/item_8/id = 8
popup/item_9/text = "Bounce"
popup/item_9/id = 9
popup/item_10/text = "Back"
popup/item_10/id = 10

[node name="VBoxContainer9" type="VBoxContainer" parent="VBoxContainer/PanelContainer/VBoxContainer/HFlowContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/PanelContainer/VBoxContainer/HFlowContainer/VBoxContainer9"]
layout_mode = 2
text = "Step 8"
horizontal_alignment = 1

[node name="Wait" type="CheckBox" parent="VBoxContainer/PanelContainer/VBoxContainer/HFlowContainer/VBoxContainer9"]
unique_name_in_owner = true
layout_mode = 2
button_pressed = true
text = "Wait"

[node name="VBoxContainer7" type="VBoxContainer" parent="VBoxContainer/PanelContainer/VBoxContainer/HFlowContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/PanelContainer/VBoxContainer/HFlowContainer/VBoxContainer7"]
layout_mode = 2
text = "Step 9"
horizontal_alignment = 1

[node name="Countdown" type="CheckBox" parent="VBoxContainer/PanelContainer/VBoxContainer/HFlowContainer/VBoxContainer7"]
unique_name_in_owner = true
layout_mode = 2
button_pressed = true
text = "Countdown"

[node name="VBoxContainer8" type="VBoxContainer" parent="VBoxContainer/PanelContainer/VBoxContainer/HFlowContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/PanelContainer/VBoxContainer/HFlowContainer/VBoxContainer8"]
layout_mode = 2
text = "Step 10"
horizontal_alignment = 1

[node name="Enlarge" type="CheckBox" parent="VBoxContainer/PanelContainer/VBoxContainer/HFlowContainer/VBoxContainer8"]
unique_name_in_owner = true
layout_mode = 2
button_pressed = true
text = "Enlarge"

[node name="Vanish" type="CheckBox" parent="VBoxContainer/PanelContainer/VBoxContainer/HFlowContainer/VBoxContainer8"]
unique_name_in_owner = true
layout_mode = 2
button_pressed = true
text = "Vanish"

[node name="HSeparator" type="HSeparator" parent="VBoxContainer/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer4" type="HBoxContainer" parent="VBoxContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Button2" type="Button" parent="VBoxContainer/PanelContainer/VBoxContainer/HBoxContainer4"]
layout_mode = 2
text = "Pause/Resume"

[node name="Button3" type="Button" parent="VBoxContainer/PanelContainer/VBoxContainer/HBoxContainer4"]
layout_mode = 2
text = "Kill Tween"

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer/PanelContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Speed Scale"

[node name="SpeedSlider" type="HSlider" parent="VBoxContainer/PanelContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(600, 0)
layout_mode = 2
size_flags_vertical = 4
max_value = 5.0
step = 0.01
value = 1.0

[node name="SpeedLabel" type="Label" parent="VBoxContainer/PanelContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
text = "1x"
horizontal_alignment = 1

[node name="Progress" type="TextureProgressBar" parent="VBoxContainer/PanelContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
step = 0.001
texture_under = SubResource("GradientTexture2D_md057")
texture_progress = SubResource("GradientTexture2D_35fte")

[node name="Node2D" type="Node2D" parent="."]

[node name="Icon" type="Sprite2D" parent="Node2D"]
unique_name_in_owner = true
position = Vector2(99, 165)
texture = ExtResource("2_tapbf")

[node name="CountdownLabel" type="Label" parent="Node2D/Icon"]
unique_name_in_owner = true
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -32.0
offset_top = -32.0
offset_right = -32.0
offset_bottom = -32.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 16
theme_override_font_sizes/font_size = 32
text = "10
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Path2D" type="Path2D" parent="."]
position = Vector2(473, 204)
curve = SubResource("Curve2D_7nae7")

[connection signal="toggled" from="VBoxContainer/PanelContainer/VBoxContainer/HBoxContainer3/Infinite" to="." method="infinite_toggled"]
[connection signal="pressed" from="VBoxContainer/PanelContainer/VBoxContainer/HBoxContainer3/Button" to="." method="start_animation"]
[connection signal="pressed" from="VBoxContainer/PanelContainer/VBoxContainer/HBoxContainer4/Button2" to="." method="pause_resume"]
[connection signal="pressed" from="VBoxContainer/PanelContainer/VBoxContainer/HBoxContainer4/Button3" to="." method="kill_tween"]
[connection signal="value_changed" from="VBoxContainer/PanelContainer/VBoxContainer/HBoxContainer2/SpeedSlider" to="." method="speed_changed"]
